--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,28 @@
 PORT=5000
 MONGO_URL=mongodb://127.0.0.1:27017
 MONGO_DB_NAME=erap-test
+
+BASE_URL=http://localhost:5000
+
+# JWT secret key
+JWT_SECRET=thisisasamplesecret
+# Number of minutes after which an access token expires
+JWT_ACCESS_EXPIRATION_MINUTES=30
+# Number of days after which a refresh token expires
+JWT_REFRESH_EXPIRATION_DAYS=30
+# Number of minutes after which a reset password token expires
+JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
+# Number of minutes after which a verify email token expires
+JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
+
+# SMTP configuration options for the email service
+# For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
+SMTP_HOST=email-server
+SMTP_PORT=587
+SMTP_USER=email-server-username
+SMTP_PASS=email-server-password
+EMAIL_FROM=support@ourApp.com
+
+
+# URL of client application
+CLIENT_URL=http://localhost:5000
