--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongodb": "^4.0.7",
@@ -31,10 +32,12 @@
     "@types/express-session": "^1.17.6",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "http-status": "^1.6.2",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
