--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.14.6",
+    "@types/nodemailer": "^6.4.7",
     "@types/validator": "^13.7.14",
     "nodemon": "^2.0.21",
     "rimraf": "^4.3.1",
@@ -44,6 +45,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "validator": "^13.9.0",
     "winston": "^3.8.2"
   }
