--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,9 @@
 NODE_ENV=development
 PORT=5000
 #only for docker
-# MONGO_URL=mongodb://db:27017/erap-test
+MONGO_URL=mongodb://db:27017/erap-test
 #only for local
-MONGO_URL=mongodb://127.0.0.1:27017/erap-test
+# MONGO_URL=mongodb://127.0.0.1:27017/erap-test
 MONGO_DB_NAME=erap-test
 # MONGO_URL=mongodb+srv://john_merga:aWzzQnOIdSHgkG7T@cluster0.qrq7lml.mongodb.net/erap?retryWrites=true&w=majority
 # MONGO_DB_NAME=erap
