--- a/package.json
+++ b/package.json
@@ -1,52 +1,64 @@
 {
-  "name": "erap-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/server.js",
-  "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
-    "start": "cross-env NODE_ENV=production node ./dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node ./src/server.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongodb": "^4.0.7",
-    "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.14.6",
-    "@types/nodemailer": "^6.4.7",
-    "@types/validator": "^13.7.14",
-    "nodemon": "^2.0.21",
-    "rimraf": "^4.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@types/express-session": "^1.17.6",
-    "bcryptjs": "^2.4.3",
-    "connect-mongo": "^4.6.0",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "helmet": "^6.0.1",
-    "http-status": "^1.6.2",
-    "joi": "^17.8.3",
-    "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
-    "mongoose": "^7.0.1",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1",
-    "validator": "^13.9.0",
-    "winston": "^3.8.2"
+    "name": "erap-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./dist/server.js",
+    "scripts": {
+      "clean": "rimraf dist",
+      "build": "npm run clean && tsc",
+      "start": "cross-env NODE_ENV=production node ./dist/server.js",
+      "dev": "cross-env NODE_ENV=development nodemon --inspect=0.0.0.0:9229 --signal SIGINT --nolazy ./src/server.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+      "@faker-js/faker": "^7.6.0",
+      "@types/bcryptjs": "^2.4.2",
+      "@types/cors": "^2.8.13",
+      "@types/express": "^4.17.17",
+      "@types/jsonwebtoken": "^9.0.1",
+      "@types/mongodb": "^4.0.7",
+      "@types/mongoose": "^5.11.97",
+      "@types/morgan": "^1.9.4",
+      "@types/node": "^18.14.6",
+      "@types/nodemailer": "^6.4.7",
+      "@types/validator": "^13.7.14",
+      "nodemon": "^2.0.21",
+      "rimraf": "^4.3.1",
+      "ts-node": "^10.9.1",
+      "typescript": "^4.9.5"
+    },
+    "dependencies": {
+      "@types/express-session": "^1.17.6",
+      "bcryptjs": "^2.4.3",
+      "connect-mongo": "^4.6.0",
+      "cors": "^2.8.5",
+      "cross-env": "^7.0.3",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "express-session": "^1.17.3",
+      "helmet": "^6.0.1",
+      "http-status": "^1.6.2",
+      "joi": "^17.8.3",
+      "jsonwebtoken": "^9.0.0",
+      "moment": "^2.29.4",
+      "mongoose": "^7.0.1",
+      "morgan": "^1.10.0",
+      "multer": "^1.4.5-lts.1",
+      "nodemailer": "^6.9.1",
+      "validator": "^13.9.0",
+      "winston": "^3.8.2"
+    },
+    "nodemonConfig": {
+      "ignore": [
+        "dist/**/*"
+      ],
+      "watch": [
+        "src/**/*"
+      ],
+      "execMap": {
+        "ts": "node -r ts-node/register"
+      }
+    }
   }
-}
