payment configuration for chapa

--- a/.env.test
+++ b/.env.test
@@ -30,3 +30,7 @@ EMAIL_FROM=support@ourApp.com
 
 # URL of client application
 CLIENT_URL=http://localhost:5000
+
+# payment gateway
+CHAPA_PUB_KEY=CHAPUBK_TEST-GJth787pZWY0LaMf3OagJSGxLZjRj9gY
+CHAPA_SECRETE_KEY=CHASECK_TEST-B1EhPJT3TZQAAxEGIAhzk2v705g7bfcW
