--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "clean": "rimraf dist",
         "build": "npm run clean && tsc",
         "start": "cross-env NODE_ENV=production node ./dist/server.js",
-        "dev": "cross-env NODE_ENV=development nodemon --inspect=0.0.0.0:9229 --signal SIGINT --nolazy ./src/server.ts"
+        "dev": "cross-env NODE_ENV=development nodemon --exec ts-node ./src/server.ts",
+        "docker:dev": "cross-env NODE_ENV=development nodemon --inspect=0.0.0.0:9229 --signal SIGINT --nolazy ./src/server.ts"
     },
     "keywords": [],
     "author": "",
@@ -28,11 +29,13 @@
         "nodemon": "^2.0.21",
         "rimraf": "^4.3.1",
         "ts-node": "^10.9.1",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^4.9.5"
     },
     "dependencies": {
         "@types/express-session": "^1.17.6",
         "bcryptjs": "^2.4.3",
+        "chapa-nodejs": "^1.2.0",
         "connect-mongo": "^4.6.0",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
