--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "express-unless": "^2.1.3",
         "helmet": "^6.0.1",
         "http-status": "^1.6.2",
         "joi": "^17.8.3",
