--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "@types/express-session": "^1.17.6",
+        "axios": "^1.4.0",
         "bcryptjs": "^2.4.3",
         "chapa-nodejs": "^1.2.0",
         "connect-mongo": "^4.6.0",
