--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.1",
+        "socket.io": "^4.6.2",
         "validator": "^13.9.0",
         "winston": "^3.8.2"
     },
