--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "@types/express-session": "^1.17.6",
+        "@types/uuid": "^9.0.2",
         "axios": "^1.4.0",
         "bcryptjs": "^2.4.3",
         "chapa-nodejs": "^1.2.0",
@@ -54,6 +55,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.1",
         "socket.io": "^4.6.2",
+        "uuid": "^9.0.0",
         "validator": "^13.9.0",
         "winston": "^3.8.2"
     },
